[package]
name = "ukagaka-dll-macro"
version = "0.1.0"
edition = "2021"
authors = [ "tukinami seika" ]
license = "MIT"
readme = "README.md"
description = "macros for Ukagaka DLL."

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winbase", "libloaderapi", "stringapiset"]}
